--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,7 +28,8 @@ Style/HashEachMethods:
   Enabled: false
       
 Style/StringLiterals:
-  Exclude: 'db/schema.rb'
+  Exclude: 
+    - 'db/schema.rb'
 
 Style/HashTransformKeys:
   Enabled: false
