--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -27,6 +27,10 @@ AllCops:
 Style/HashEachMethods:
   Enabled: false
       
+Style/StringLiterals:
+  Exclude: 
+    - 'db/schema.rb'
+
 Style/HashTransformKeys:
   Enabled: false
     
