--- a/.github/workflows/pronto.yml
+++ b/.github/workflows/pronto.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           fetch-depth: 100
       - run: |
-          git fetch --no-tags --prune --depth=10 origin +refs/heads/*:refs/remotes/origin/*
+          git fetch --no-tags --prune origin +refs/heads/*:refs/remotes/origin/*
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
       - name: Setup pronto
