--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - .:/rails-lyrics-site
       - bundle:/usr/local/bundle
+      - /rails-lyrics-site/node_modules
     ports:
       - "3000:3000"
     depends_on:
