--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -22,7 +22,19 @@ services:
     depends_on:
       - db
 
+  nginx:
+    build:
+      context: containers/nginx
+    volumes:
+      - public-data:/rails-lyrics-site/public
+      - tmp-data:/rails-lyrics-site/tmp
+    ports:
+      - "80:80"
+    depends_on:
+      - web
+
 volumes:
   bundle:
   public-data:
   log-data:
+  tmp-data:
