--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,7 +10,7 @@ services:
 
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails assets:precompile && bundle exec puma -C config/puma.rb"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec puma -C config/puma/production.rb"
     volumes:
       - .:/rails-lyrics-site
       - /rails-lyrics-site/node_modules
