--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,8 +23,7 @@ server {
   keepalive_timeout 5;
 
   # リバースプロキシ関連の設定
-  location @rails-lyrics-site {
-    proxy_set_header X-Real-IP $remote_addr;
+  location / {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_pass http://rails-lyrics-site;
