--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,6 +15,8 @@ services:
       - .:/rails-lyrics-site
       - /rails-lyrics-site/node_modules
       - bundle:/usr/local/bundle
+      - public-data:/rails-lyrics-site/public
+      - log-data:/rails-lyrics-site/log
     ports:
       - "3000:3000"
     depends_on:
@@ -23,6 +25,7 @@ services:
   nginx:
     build: nginx
     volumes:
+      - public-data:/rails-lyrics-site/public
       - .:/rails-lyrics-site
     ports:
       - "80:80"
@@ -31,4 +34,5 @@ services:
 
 volumes:
   bundle:
+  public-data:
   log-data:
