--- a/config/database.yml
+++ b/config/database.yml
@@ -87,6 +87,7 @@ test:
 #
 production:
   <<: *default
-  database: rails_lyrics_site_production
-  username: rails_lyrics_site
-  password: <%= ENV["RAILS_LYRICS_SITE_DATABASE_PASSWORD"] %>
+  host: <%= ENV["DB_HOST"] %>
+  database: <%= ENV["DB_DATABASE"] %>
+  username: <%= ENV["DB_USERNAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
