--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,16 +1,9 @@
 version: '3'
 
 services:
-  db:
-    image: postgres
-    volumes:
-      - ./tmp/db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: password
-
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails assets:precompile && bundle exec puma -C config/puma/production.rb"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails assets:precompile && bundle exec puma -C config/puma/production.rb -e production"
     volumes:
       - .:/rails-lyrics-site
       - /rails-lyrics-site/node_modules
@@ -18,8 +11,6 @@ services:
       - log-data:/rails-lyrics-site/log
     ports:
       - "3000:3000"
-    depends_on:
-      - db
 
   nginx:
     build: nginx
