--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
+    "@hotwired/stimulus-webpack-helpers":"^1.0.1",
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.14",
     "bootstrap": "^5.3.0",
