--- a/.github/workflows/download-test-coverage.yml
+++ b/.github/workflows/download-test-coverage.yml
@@ -1,13 +1,17 @@
 name: Download Test Coverage Result
 on: [pull_request]
 
-steps:
-- uses: actions/checkout@v3
+jobs:
+  download-test-coverage:
 
-- uses: actions/download-artifact@v3
-  with:
-    path: https://demo-code-coverage.s3.ap-northeast-1.amazonaws.com/coverage
-    
-- name: Display structure of downloaded files
-  run: ls -R
-  working-directory: https://demo-code-coverage.s3.ap-northeast-1.amazonaws.com/coverage
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+
+    - uses: actions/download-artifact@v3
+      with:
+        path: https://demo-code-coverage.s3.ap-northeast-1.amazonaws.com/coverage
+        
+    - name: Display structure of downloaded files
+      run: ls -R
+      working-directory: https://demo-code-coverage.s3.ap-northeast-1.amazonaws.com/coverage
