--- a/.github/workflows/download-test-coverage.yml
+++ b/.github/workflows/download-test-coverage.yml
@@ -3,14 +3,17 @@ on: [pull_request]
 
 jobs:
   download-test-coverage:
-
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - uses: actions/download-artifact@v3
-      with:
-        path: https://demo-code-coverage.s3.ap-northeast-1.amazonaws.com/coverage
-        
-    - name: Display structure of downloaded files
-      run: ls -R
+      - name: Download object
+        uses: aws-actions/s3-download@v1
+        env:
+          # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          # AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          REGION: ap-northeast-1
+          BUCKET: demo-code-coverage
+          OBJECT: /coverage
+          OUTPUT_FILE: ./coverage
