--- a/.github/workflows/download-test-coverage.yml
+++ b/.github/workflows/download-test-coverage.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           command: cp
           source: s3://demo-code-coverage/coverage
-          destination: ./coverage/
+          destination: ./
           aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ap-northeast-1
