--- a/.github/workflows/download-test-coverage.yml
+++ b/.github/workflows/download-test-coverage.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Download
+      - name: Get the coverage result
         uses: keithweaver/aws-s3-github-action@v1.0.0
         with:
           command: cp
@@ -18,3 +18,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: ap-northeast-1
           flags: --recursive
+      - name: Push the coverage result to artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: ./coverage/
