--- a/.github/workflows/download-test-coverage.yml
+++ b/.github/workflows/download-test-coverage.yml
@@ -21,4 +21,5 @@ jobs:
       - name: Push the coverage result to artifacts
         uses: actions/upload-artifact@v3
         with:
+          name: coverage
           path: ./coverage/
