--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,33 +1,24 @@
 version: '3'
 
 services:
-  db:
-    image: postgres
-    volumes:
-      - ./tmp/db:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: password
-
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails assets:precompile && bundle exec puma -C config/puma/production.rb"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec puma -C config/puma/production.rb -e production"
     volumes:
       - .:/rails-lyrics-site
       - /rails-lyrics-site/node_modules
       - bundle:/usr/local/bundle
-      - public-data:/rails-lyrics-site/public
       - log-data:/rails-lyrics-site/log
       - tmp-data:/rails-lyrics-site/tmp
+      - public-data:/rails-lyrics-site/public
     ports:
       - "3000:3000"
-    depends_on:
-      - db
 
   nginx:
     build: nginx
     volumes:
-      - public-data:/rails-lyrics-site/public
       - tmp-data:/rails-lyrics-site/tmp
+      - public-data:/rails-lyrics-site/public
     ports:
       - "80:80"
     depends_on:
@@ -35,6 +26,6 @@ services:
 
 volumes:
   bundle:
-  public-data:
   log-data:
   tmp-data:
+  public-data:
