--- a/config/database.yml
+++ b/config/database.yml
@@ -87,7 +87,7 @@ test:
 #
 production:
   <<: *default
+  database: rails_lyrics_site_development
   host: <%= ENV["DB_HOST"] %>
-  database: <%= ENV["DB_DATABASE"] %>
   username: <%= ENV["DB_USERNAME"] %>
   password: <%= ENV["DB_PASSWORD"] %>
