--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,6 +14,19 @@ services:
     ports:
       - "3000:3000"
 
+  solr:
+    image: solr:9.3.0
+    ports:
+      - "8983:8983"
+    volumes:
+      - search-data:/opt/solr/server/solr/mycores
+    entrypoint:
+      - docker-entrypoint.sh
+      - solr-precreate
+      - development
+    # links:
+    #   - db:db
+
   nginx:
     build: nginx
     volumes:
@@ -29,3 +42,4 @@ volumes:
   log-data:
   tmp-data:
   public-data:
+  search-data:
