--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -10,6 +10,7 @@ production:
 development:
   solr:
     hostname: solr
+    solr_home: solr
     port: 8983
     log_level: INFO
     path: /solr/development
@@ -17,6 +18,7 @@ development:
 test:
   solr:
     hostname: solr
+    solr_home: solr
     port: 8983
     log_level: WARNING
     path: /solr/test
