--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
     environment:
       POSTGRES_PASSWORD: password
 
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
+
   app:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails assets:precompile && bundle exec rails s -p 3000 -b '0.0.0.0'"
@@ -22,6 +27,16 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - redis
+
+  sidekiq:
+    build: .
+    command: bundle exec sidekiq
+    volumes:
+      - .:/rails-lyrics-site
+    depends_on:
+      - db
+      - redis
 
 volumes:
   bundle:
