--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "6379:6379"
 
   solr:
-    image: solr:8.6
+    build: solr_docker
     ports:
       - "8983:8983"
     volumes:
@@ -30,7 +30,7 @@ services:
 
   app:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails assets:precompile && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/rails-lyrics-site
       - bundle:/usr/local/bundle
