temp search page

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,9 @@ services:
 
   app:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid &&
+      bundle exec rake sunspot:reindex &&
+      bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/rails-lyrics-site
       - bundle:/usr/local/bundle
