--- a/solr_docker/Dockerfile
+++ b/solr_docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM solr:8.6
 
 RUN curl -sL https://jdbc.postgresql.org/download/postgresql-42.2.6.jar
-COPY managed-schema /opt/solr/server/solr/configsets/_default/conf/managed-schema
+COPY solr/configsets/_default/conf /opt/solr/server/solr/configsets/_default/conf
