--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,7 +23,7 @@ services:
     entrypoint:
       - docker-entrypoint.sh
       - solr-precreate
-      - development
+      - production
     # links:
     #   - db:db
 
