Data import in Solr (#36)
* add install JDBC for SOLR

* solr config

* edit cores for test and production

--- a/solr_docker/Dockerfile
+++ b/solr_docker/Dockerfile
@@ -1,3 +1,4 @@
 FROM solr:8.6
 
-COPY managed-schema /opt/solr/server/solr/configsets/_default/conf/managed-schema
+RUN curl -sL https://jdbc.postgresql.org/download/postgresql-42.2.6.jar
+COPY solr/configsets/_default/conf /opt/solr/server/solr/configsets/_default/conf
