--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,6 +1,6 @@
 production:
   solr:
-    hostname: <%= ENV["SOLR_HOST"] %>
+    hostname: solr
     port: 8983
     log_level: WARNING
     path: /solr/production
