--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -24,8 +24,6 @@ services:
       - docker-entrypoint.sh
       - solr-precreate
       - production
-    # links:
-    #   - db:db
 
   nginx:
     build: nginx
@@ -34,8 +32,12 @@ services:
       - public-data:/rails-lyrics-site/public
     ports:
       - "80:80"
-    depends_on:
-      - web
+
+  sidekiq:
+    build: .
+    command: bundle exec sidekiq
+    volumes:
+      - .:/rails-lyrics-site
 
 volumes:
   bundle:
