--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,23 +15,9 @@ services:
     ports:
       - "6379:6379"
 
-  solr:
-    build: solr_docker
-    ports:
-      - "8983:8983"
-    volumes:
-      - search-data:/opt/solr/server/solr/mycores
-    entrypoint:
-      - bash
-      - "-c"
-      - "precreate-core development; precreate-core test; exec solr -f"
-    depends_on:
-      - db
-
   app:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid &&
-      bundle exec rake sunspot:reindex &&
       bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/rails-lyrics-site
@@ -40,10 +26,12 @@ services:
       - public-data:/rails-lyrics-site/public
     ports:
       - "3000:3000"
+    environment:
+      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
     depends_on:
       - db
-      - solr
       - redis
+      - elasticsearch
 
   sidekiq:
     build: .
@@ -53,9 +41,54 @@ services:
     depends_on:
       - db
       - redis
+      - elasticsearch
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.1
+    ports:
+      - 9200:9200
+    environment:
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - xpack.monitoring.enabled=false
+      - xpack.graph.enabled=false
+      - xpack.watcher.enabled=false
+      - ELASTIC_PASSWORD=sVUurmsWYEwnliUxp3pX
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - search-data:/usr/share/elasticsearch/data
+
+  logstash:
+    image: logstash:7.10.1
+    ports:
+      - "5044:5044"
+      - "9600:9600"
+    volumes:
+      - ls-data:/usr/share/logstash/data
+    depends_on:
+      - elasticsearch
+
+  kibana:
+    image: kibana:7.10.1
+    ports:
+      - "5601:5601"
+    volumes:
+      - kb-data:/usr/share/kibana/data
+    environment:
+      - ELASTICSEARCH_USERNAME="kibana_system"
+      - ELASTICSEARCH_PASSWORD="sVUurmsWYEwnliUxp3pX"
+    depends_on:
+      - elasticsearch
 
 volumes:
   bundle:
   tmp-data:
   public-data:
   search-data:
+  ls-data:
+  kb-data:
