--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nodemon": "^2.0.22",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.63.6"
   },
   "scripts": {
