--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "@popperjs/core": "^2.11.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.14",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
@@ -14,7 +16,8 @@
     "postcss-cli": "^10.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "typescript": "^5.5.4"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets",
